@@ -2,7 +2,8 @@
  include/pqxx/cursor.hxx, src/cursor.cxx:
   - Removed fetch_current_row() (it was odd, and hard to guarantee)
  test/unit/test_sql_cursor.cxx:
-  - Test cursor existence using FETCH, not MOVE (did not fail on older backends)
+  - Test cursor existence using FETCH, not MOVE (to make failure more likely)
+  - On older backends, test for cursor existence differently
 2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/cursor.cxx:
   - Made init_empty_result() conditional on backend version
